# fraud_detection

./: .env  .gitignore  .vercelignore  README.md  check_beanie.py  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  start-all.js  test_rules_api.py  vercel.json
api/: index.py  main.py  requirements.txt
backend/: SETUP_MONGODB.md  requirements.txt  test_mongodb.py
backend/app/: main.py  train_models.py
backend/app/api/: api.py
backend/app/api/endpoints/: alerts.py  analysis.py  cases.py  dashboard.py  reports.py  rules.py  sars.py  transactions.py
backend/app/core/: cache.py  config.py
backend/app/db/: init_db.py  seed.py  session.py
backend/app/fraud_engine/ml_engine/: fraud_model.joblib  model.py  train.py
backend/app/fraud_engine/rules_engine/: engine.py
backend/app/fraud_engine/scoring/: scorer.py
backend/app/ml_models/: ann_model.h5  ann_scaler.joblib  decision_tree.joblib  feature_columns.joblib  knn.joblib  knn_pca.joblib  le_M1.joblib  le_M2.joblib  le_M4.joblib  le_P_emaildomain.joblib  le_ProductCD.joblib  le_R_emaildomain.joblib  le_card4.joblib  le_card6.joblib  naive_bayes.joblib  results.json
backend/app/models/: models.py
backend/app/schemas/: schemas.py
backend/app/services/: llm_service.py
backend/scripts/: ingest_kaggle_data.py  ingest_real_data.py  seed_alerts.py
frontend/: next.config.ts  package-lock.json  package.json  vercel.json
frontend/api/: main.py
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/alerts/: page.tsx
frontend/src/services/: api.ts
sources/: Session.docx
(+9 files in other folders)
